# 5_http_server

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  httpd.py  makefile  pyproject.toml  server.py
src/: server_base_event.py
tests/: test_server.py
